[gd_scene load_steps=12 format=2]

[ext_resource path="res://area detection/HitBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Traps/Fire/Off.png" type="Texture" id=2]
[ext_resource path="res://assets/Traps/Fire/On (16x32).png" type="Texture" id=3]
[ext_resource path="res://assets/Traps/Fire/Hit (16x32).png" type="Texture" id=4]
[ext_resource path="res://traps/FireBlock.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/hit:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 8, 7 ), Vector2( 8, 8 ), Vector2( 8, 9 ), Vector2( 8, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InitialHitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "off"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/off:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireHitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InitialHitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/on:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireHitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InitialHitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 1 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 4.0
height = 4.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 7 )

[node name="FireBlock" type="StaticBody2D"]
script = ExtResource( 5 )

[node name="Graphics" type="Node2D" parent="."]

[node name="off" type="Sprite" parent="Graphics"]
texture = ExtResource( 2 )

[node name="hit" type="Sprite" parent="Graphics"]
visible = false
texture = ExtResource( 4 )
hframes = 4

[node name="on" type="Sprite" parent="Graphics"]
visible = false
texture = ExtResource( 3 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 1 )
anims/off = SubResource( 3 )
anims/on = SubResource( 5 )

[node name="InitialHitBox" parent="." instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 16
damage = 0

[node name="CollisionShape2D" parent="InitialHitBox" index="0"]
shape = SubResource( 7 )

[node name="FireHitBox" parent="." instance=ExtResource( 1 )]
monitoring = false
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" parent="FireHitBox" index="0"]
position = Vector2( 0, -7 )
shape = SubResource( 8 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 6 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="area_entered" from="InitialHitBox" to="." method="_on_InitialHitBox_area_entered"]

[editable path="InitialHitBox"]
[editable path="FireHitBox"]
